<?xml version="1.0"?>
<package format="3">
  <name>sci_cam</name>
  <version>0.0.0</version>
  <description>The sci cam controller package</description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    ISAAC Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    ISAAC Flight Software
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ff_util</build_depend>
  <build_depend>config_reader</build_depend>
  <build_depend>isaac_util</build_depend>
  <build_depend>isaac_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>ff_util</build_export_depend>
  <build_export_depend>config_reader</build_export_depend>
  <build_export_depend>isaac_util</build_export_depend>
  <build_export_depend>isaac_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>ff_util</exec_depend>
  <exec_depend>config_reader</exec_depend>
  <exec_depend>isaac_util</exec_depend>
  <exec_depend>isaac_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
