<?xml version="1.0"?>
<package>
  <name>isaac_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo plugins for the ISAAC simulator
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    ISAAC Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    ISAAC Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>astrobee_gazebo</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ff_msgs</build_depend>
  <build_depend>ff_util</build_depend>
  <build_depend>isaac_util</build_depend>
  <build_depend>isaac_hw_msgs</build_depend>
  <build_depend>isaac_msgs</build_depend>
  <build_depend>camera</build_depend>
  <build_depend>jsonloader</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>astrobee_gazebo</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ff_msgs</run_depend>
  <run_depend>ff_util</run_depend>
  <run_depend>isaac_util</run_depend>
  <run_depend>isaac_hw_msgs</run_depend>
  <run_depend>isaac_msgs</run_depend>
  <run_depend>camera</run_depend>
  <run_depend>jsonloader</run_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/../../description/media"/>
  </export>
</package>
