<?xml version="1.0"?>
<package>
  <name>astroberth</name>
  <version>0.0.0</version>
  <description>
    Description of the International Space Station
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>
</package>
